tests/scenes/errors/modulo_by_zero.out
OSCRIPT_TEST_FAILURE
ERROR: Modulo by zero error in operator '%'.
   at: _ready (res://scenes/errors/modulo_by_zero.torch:3)
   OScript backtrace (most recent call first):
       [0] _ready (res://scenes/errors/modulo_by_zero.torch:1)